Get apache-cassandra-2.2.8-bin.tar.gz from apache
trisect seems to have dropped this artifact

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ branches:
   only:
     - master
     - serviceDiscoveryTest
+    - kongTest
     - /^\d+\.\d+\.x$/ # release forked patches branch
 
 language: python
